Add car_photo_main and car_photos to driver [backend][db][api]
